--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <link rel="Stylesheet" href="css/style.css">
 </head>
 
-<!-- Link Javascript -->
-<script src = "js\script.js" defer></script>
-
 <body>
     <header>
       <h1>Konversi Suhu</h1>
@@ -34,11 +31,10 @@
               <label for="main-input">Celsius</label>
               <input type="number" id="main-input">
           </div>
-
           <div class="button-group">
-              <button>Konversi</button>
-              <button>Reset</button>
-              <button>Reseverse</button>
+              <button onclick="KonversiSuhu()">Konversi</button>
+              <button onclick="resetForm()">Reset</button>
+              <button onclick="reverseKonversi()">Reverse</button>
           </div>
         </form>
       </section>
@@ -74,7 +70,7 @@
 
     </section>    
   </main>
-
+    <script src="js\script.js"></script>
     <footer> Made By Putu Habel Nanda Kresna</footer>
 </body>
 
