--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
               <input type="number" id="main-input">
           </div>
           <div class="button-group">
-              <button onclick="KonversiSuhu()">Konversi</button>
-              <button onclick="resetForm()">Reset</button>
-              <button onclick="reverseKonversi()">Reverse</button>
+              <button type="button"onclick="KonversiSuhu()">Konversi</button>
+              <button type="button"onclick="resetForm()">Reset</button>
+              <button type="button"onclick="reverseKonversi()">Reverse</button>
           </div>
         </form>
       </section>
